# swaybgplus

./: .SRCINFO  PKGBUILD  PKGBUILD-git  README.md  __version__.py  background_manager.py  pyproject.toml  requirements.txt  setup.py  sway_config_parser.py  swaybgplus.1  swaybgplus.desktop  swaybgplus_cli.py  swaybgplus_gui.py
src/swaybgplus/: __init__.py  background_manager.py  cli.py  gui.py  sway_config_parser.py
