[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swaybgplus"
dynamic = ["version"]
description = "Advanced multi-monitor background manager for Sway with screen orientation support"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "SwayBG+ Contributors", email = "swaybgplus@example.com" }
]
keywords = ["sway", "wayland", "background", "wallpaper", "monitor", "multi-monitor", "orientation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Wayland",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "Pillow>=7.0.0",
    "PyGObject>=3.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
"Bug Reports" = "https://github.com/alephpt/swaybgplus/issues"
"Source" = "https://github.com/alephpt/swaybgplus"
"Documentation" = "https://github.com/alephpt/swaybgplus/blob/main/README.md"

[project.scripts]
swaybgplus = "swaybgplus.cli:main"
swaybgplus-cli = "swaybgplus.cli:main"
swaybgplus-gui = "swaybgplus.gui:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["linux"]

[tool.setuptools.dynamic]
version = { attr = "swaybgplus.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/applications" = ["swaybgplus.desktop"]
"share/doc/swaybgplus" = ["README.md"]
"share/man/man1" = ["swaybgplus.1"]
